[package]
name = "book"
version = "0.1.0"
edition = "2021"
description = "Learns of the rust book"
license = "MIT"
repository = "git"
readme = "README"
keywords = ["rust", "rust-book"]
categories = ["algorithms", "command-line-interface"]

[profile.release]
panic = 'abort'

[dependencies]
rand = "0.8.5"
