[workspace]
# https://doc.rust-lang.org/cargo/reference/workspaces.html
members = ["rusting", "backy"]
resolver = "3"

[workspace.package]
# https://doc.rust-lang.org/cargo/reference/manifest.html
version = "0.1.0"
authors = ["Mega Alpha <mega.alpha100@gmail.com>"]
edition = "2024"
repository = "https://github.com/Ultra-Code/rusty"
description = "Compilation of my rust journey and adventures"
keywords = ["learning", "rust", "journey"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
panic = 'abort'

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
all = { level = "deny", priority = 1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
