cargo-features = ["edition2024"]

[package]
name = "backy"
description = "A backend websever in rust using actix-web"
keywords = ["webserver", "actix-web", "backend"]
categories = ["web-programming", "command-line-utilities"]
repository.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
actix-files = { version = "0.6.6", features = ["experimental-io-uring"] }
actix-web = { version = "4.9.0", features = [
  "experimental-io-uring",
  "rustls-0_23",
] }
derive_more = { version = "1.0.0", features = ["display", "error"] }
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
