[package]
name = "rusting"
description = "Learns of the rust book"
keywords = ["rust", "rust-book"]
categories = ["algorithms", "command-line-interface"]
repository.workspace = true
readme.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "rusty"
path = "lib.rs"

[[bin]]
name = "main"
path = "main.rs"

[[bin]]
name = "guess"
path = "bin/guess.rs"

[[bin]]
name = "mgrep"
path = "bin/mgrep.rs"

[[bin]]
name = "webserver"
path = "bin/webserver.rs"

[lints]
workspace = true

[dependencies]
rand = "0.8.5"
